--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "mysql2": "^3.13.0",
+    "node": "^23.9.0",
     "node.js": "^0.0.1-security",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
